# pathopsv0

./: .gitmodules  BUILD.bazel  HelloWorld.cpp  OpConic.cpp  OpContour.cpp  OpContour.h  OpCubic.cpp  OpCurve.cpp  OpCurve.h  OpCurveCurve.cpp  OpCurveCurve.h  OpDebug.cpp  OpDebug.h  OpDebugColor.cpp  OpDebugColor.h  OpDebugColor.txt  OpDebugCompare.cpp  OpDebugCompare.h  OpDebugDeclarations.h  OpDebugDefinitions.h  OpDebugDouble.cpp  OpDebugDouble.h  OpDebugDump.cpp  OpDebugDump.h  OpDebugGenerator.cpp  OpDebugImage.cpp  OpDebugImage.h  OpDebugSkiaTests.cpp  OpDebugSkiaTests.h  OpEdge.cpp  OpEdge.h  OpEdgeBuilder.cpp  OpEdgeBuilder.h  OpEdgeIntersect.cpp  OpEdgeIntersect.h  OpEdges.cpp  OpEdges.h  OpIntersection.cpp  OpIntersection.h  OpJoiner.cpp  (+30 more)
cmake/: CMakeLists.txt  frametest.cpp  path2Dtest.cpp  skiatest.cpp
curves/: BinaryWinding.h  ConicBezier.h  CubicBezier.h  Line.h  NoCurve.h  QuadBezier.h  UnaryWinding.h
debug/: DebugOps.h  DebugOpsTypes.h  OpDebug.cpp  OpDebug.h  OpDebugColor.cpp  OpDebugColor.h  OpDebugColor.txt  OpDebugCompare.cpp  OpDebugDeclarations.h  OpDebugDefinitions.h  OpDebugDouble.cpp  OpDebugDouble.h  OpDebugDump.cpp  OpDebugDump.h  OpDebugGenerator.cpp  OpDebugImage.cpp  OpDebugImage.h  OpDebugRaster.cpp  OpDebugRaster.h  OpDebugRecord.cpp  OpDebugRecord.h
docs/: BUILD.gn.excerpt.txt  bashrc.excerpt.txt  figur_conicweights.cpp  figur_monotonicity.cpp  readme.html
emscripten/: Path2D.cpp  Path2D.h
pov0/: CMakeLists.txt
pov0/pov0/: CMakeLists.txt  pov0.cpp  pov0.h  tinytest.cpp
skia/: SkiaPaths.cpp  SkiaPaths.h
src/: OpConic.cpp  OpContour.cpp  OpContour.h  OpCubic.cpp  OpCurve.cpp  OpCurve.h  OpCurveCurve.cpp  OpCurveCurve.h  OpEdge.cpp  OpEdge.h  OpIntersection.cpp  OpIntersection.h  OpJoiner.cpp  OpJoiner.h  OpLine.cpp  OpMath.cpp  OpMath.h  OpOperators.h  OpQuad.cpp  OpSegment.cpp  OpSegment.h  OpSegments.cpp  OpSegments.h  OpTightBounds.h  OpWinder.cpp  OpWinder.h  OpWinding.cpp  OpWinding.h
tests/: FrameTest.cpp  HelloWorld.cpp  HelloWorld.h  OpDebugSkiaTests.cpp  OpDebugSkiaTests.h  OpSkiaTests.cpp  OpSkiaTests.h  OpSkiaTests.h.in  OpTestDrive.h  OpTestDrive.h.in  OpV0Tests.cpp  Path2DTest.cpp  PathOpsBattles_shim.cpp  PathOpsChalkboardTest_shim.cpp  PathOpsFuzz763Test_shim.cpp  PathOpsInverseTest_shim.cpp  PathOpsIssue3651_shim.cpp  PathOpsOpCircleThreadedTest_shim.cpp  PathOpsOpCubicThreadedTest_shim.cpp  PathOpsOpLoopThreadedTest_shim.cpp  PathOpsOpRectThreadedTest_shim.cpp  PathOpsOpTest_shim.cpp  PathOpsSimplifyDegenerateThreadedTest_shim.cpp  PathOpsSimplifyFailTest_shim.cpp  PathOpsSimplifyQuadThreadedTest_shim.cpp  PathOpsSimplifyQuadralateralsThreadedTest_shim.cpp  PathOpsSimplifyRectThreadedTest_shim.cpp  PathOpsSimplifyTest_shim.cpp  PathOpsSimplifyTrianglesThreadedTest_shim.cpp  PathOpsTigerTest_shim.cpp  SkiaEnumSkPathOp.h  SkiaTestCommon.h  SkiaTestShim.h  SkiaTestsCommon.h  TestNewInterface.cpp  TinySkia.cpp  TinySkia.h  UnitTestPathOps.cpp  oldPathOpsBattles.cpp  oldPathOpsOpTest.cpp
